<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pid_selector"
        >

    </android.support.v7.widget.AppCompatSpinner>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pid_p"
                android:gravity="center"
                android:textSize="@dimen/pid_label_size"
                android:layout_weight="1"
                android:id="@+id/p_label"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pid_p"
                android:layout_weight="10"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pid_i"
                android:gravity="center"
                android:textSize="@dimen/pid_label_size"
                android:layout_weight="1"
                android:id="@+id/i_label"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pid_i"
                android:layout_weight="10"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pid_d"
                android:gravity="center"
                android:textSize="@dimen/pid_label_size"
                android:layout_weight="1"
                android:id="@+id/d_label"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pid_d"
                android:layout_weight="10"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pid_send"
        android:text="@string/send"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mode_selector"
        >

    </android.support.v7.widget.AppCompatSpinner>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginTop="@dimen/control_seekbars_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/throttle"
                android:gravity="center_horizontal"
                android:textSize="@dimen/label_size"
                android:layout_weight="1"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/throttle"
                android:layout_weight="10"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/control_seekbars_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/gx"
                android:textSize="@dimen/label_size"
                android:layout_weight="1"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sb_gx"
                android:layout_weight="10"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/control_seekbars_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gy"
                android:gravity="center_horizontal"
                android:textSize="@dimen/label_size"
                android:layout_weight="1"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sb_gy"
                android:layout_weight="10"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/control_seekbars_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gz"
                android:gravity="center_horizontal"
                android:textSize="@dimen/label_size"
                android:layout_weight="1"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sb_gz"
                android:layout_weight="10"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/on"
            android:text="@string/on"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/off"
            android:text="@string/off"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn_reset"
            android:text="@string/reset"/>
    </LinearLayout>


</LinearLayout>